# forek

./: .clang-tidy  .clangd  CMakeLists.txt  pyproject.toml  setup.py
benchmarks/tptl/: exp.hpp
cmake/: FetchAntlrJar.cmake
grammars/: CMakeLists.txt
grammars/ltl/past/: PastTimeLinearTemporalLogicParser.g4
grammars/stl/: CMakeLists.txt
include/forek/: algebra.h  errors.h  forek.h  formulas.h  interval.h  ir.h  ltl.h  mtl.h  pl.h  stpl.h  tptl.h  tqtl.h  visitors.h
include/forek/algebra/: ast.h  canonical_sum.h  expr.h  visitor.h
include/forek/ltl/: formula.h  ir.h  tree.h  visitor.h
include/forek/mtl/: formula.h  ir.h  tree.h  visitor.h
include/forek/pl/: formula.h  ir.h  tree.h  visitor.h
include/forek/stl/: formula.h  ir.h  tree.h  visitor.h
include/forek/stpl/: formula.h  visitor.h
include/forek/tptl/: formula.h  visitor.h
include/forek/tqtl/: formula.h  visitor.h
python/: CMakeLists.txt
python/forek/: forek.cxx
src/: CMakeLists.txt  algebra.cxx  common.cxx  common.h  interval.cxx  ir.cxx  listeners.h  ltl.cxx  mtl.cxx  pl.cxx  stl.cxx
src/grammars/: CMakeLists.txt
tests/: .clang-tidy  CMakeLists.txt  pl.cxx  test_ltl.cxx  test_mtl.cxx  test_pl.cxx  test_stl.cxx
